istio/testdata/helmtest_dev.yaml
values: ../values.yaml
name: istio-dev
namespace: aro-hcp
helmChartDir: ../deploy
testData: {}
