istio/testdata/helmtest_mise.yaml
values: ../values.yaml
name: istio-mise-enabled
namespace: aks-istio-system
testData:
  mise:
    deploy: true
